--- a/doc/cyclo/Makefile.am
+++ b/doc/cyclo/Makefile.am
@@ -20,10 +20,10 @@ EXTRA_DIST = cyclo-$(PACKAGE).html
 cyclo-$(PACKAGE).html:
 	$(PMCCABE) `find $(top_srcdir)/lib -name \*.[ch] | grep -v -e ../gl` \
 		| sort -nr \
-		| $(AWK) -f ${top_srcdir}/build-aux/pmccabe2html \
+		| $(AWK) -f ${top_srcdir}/lib/build-aux/pmccabe2html \
 			-v lang=html -v name="$(PACKAGE_NAME)" \
 			-v vcurl="http://git.savannah.gnu.org/gitweb/?p=$(PACKAGE).git;a=blob;f=%FILENAME%;hb=HEAD" \
 			-v url="http://www.gnu.org/software/$(PACKAGE)/" \
-                       -v css=${top_srcdir}/build-aux/pmccabe.css \
+                       -v css=${top_srcdir}/lib/build-aux/pmccabe.css \
 			> $@-tmp
 	mv $@-tmp $@
