--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ examples/client-callback
 examples/client-mech
 examples/client-serverfirst
 gl/alloca.h
+gl/arg-nonnull.h
 gl/arpa/
 gl/charset.alias
 gl/configmake.h
@@ -48,8 +49,14 @@ gl/ref-del.sed
 gl/stdio.h
 gl/stdlib.h
 gl/string.h
+gl/sys/
 gl/unistd.h
+gl/warn-on-use.h
+gl/wchar.h
+gltests/arg-nonnull.h
+gltests/fcntl.h
 gltests/libtests.a
+gltests/sys/
 gltests/test-alignof
 gltests/test-alloca-opt
 gltests/test-arpa_inet
@@ -96,6 +103,8 @@ gltests/test-vasnprintf
 gltests/test-version-etc
 gltests/test-wchar
 gltests/test-wctype
+gltests/time.h
+gltests/warn-on-use.h
 lib/aclocal.m4
 lib/autom4te.cache/
 lib/build-aux/config.guess
@@ -113,10 +122,14 @@ lib/config.status
 lib/configure
 lib/digest-md5/test-parser
 lib/gl/alloca.h
+lib/gl/arg-nonnull.h
 lib/gl/stdio.h
 lib/gl/stdlib.h
 lib/gl/string.h
 lib/gl/unistd.h
+lib/gl/warn-on-use.h
+lib/gl/wchar.h
+lib/gltests/arg-nonnull.h
 lib/gltests/libtests.a
 lib/gltests/test-alloca-opt
 lib/gltests/test-base64
@@ -141,6 +154,7 @@ lib/gltests/test-unistd
 lib/gltests/test-vasnprintf
 lib/gltests/test-vasprintf
 lib/gltests/test-wchar
+lib/gltests/warn-on-use.h
 lib/libgsasl.pc
 lib/libtool
 lib/m4/codeset.m4
@@ -235,3 +249,4 @@ tests/old-simple
 tests/scram
 tests/simple
 tests/suggest
+tests/symbols
