--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,27 @@ configure
 doc/abstraction.pdf
 doc/controlflow.pdf
 doc/controlflow2.pdf
+doc/cyclo/cyclo-gsasl.html
 doc/doxygen/Doxyfile
 doc/gsasl-api-error-labels.texi
 doc/gsasl.1
+doc/gsasl.aux
+doc/gsasl.cp
+doc/gsasl.cps
+doc/gsasl.dvi
+doc/gsasl.fn
+doc/gsasl.fns
+doc/gsasl.html
 doc/gsasl.info
 doc/gsasl.info-1
+doc/gsasl.ky
+doc/gsasl.log
+doc/gsasl.pdf
+doc/gsasl.pg
+doc/gsasl.ps
+doc/gsasl.toc
+doc/gsasl.tp
+doc/gsasl.vr
 doc/man/
 doc/print-errors
 doc/reference/
@@ -105,6 +121,7 @@ gltests/test-wchar
 gltests/test-wctype
 gltests/time.h
 gltests/warn-on-use.h
+gsasl-*.tar.gz
 lib/aclocal.m4
 lib/autom4te.cache/
 lib/build-aux/config.guess
@@ -134,7 +151,10 @@ lib/gltests/libtests.a
 lib/gltests/test-alloca-opt
 lib/gltests/test-base64
 lib/gltests/test-errno
+lib/gltests/test-gc
+lib/gltests/test-gc-hmac-md5
 lib/gltests/test-gc-hmac-sha1
+lib/gltests/test-gc-md5
 lib/gltests/test-gc-pbkdf2-sha1
 lib/gltests/test-gc-sha1
 lib/gltests/test-getdelim
