--- a/lib/gs2/Makefile.am
+++ b/lib/gs2/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# Copyright (C) 2006, 2008, 2009 Simon Josefsson.
+# Copyright (C) 2006, 2008, 2009, 2010 Simon Josefsson.
 #
 # This file is part of GNU SASL Library.
 #
@@ -38,6 +38,6 @@ endif
 
 LDADD = libgsasl-gs2.la ../gl/libgl.la
 
-ctests = test-parser$(EXEEXT)
+ctests = test-parser
 TESTS = $(ctests)
 check_PROGRAMS = $(ctests)
