--- a/.gitignore
+++ b/.gitignore
@@ -76,11 +76,14 @@ gltests/sys/
 gltests/test-alignof
 gltests/test-alloca-opt
 gltests/test-arpa_inet
+gltests/test-binary-io
 gltests/test-c-ctype
 gltests/test-c-strcasecmp
 gltests/test-c-strncasecmp
+gltests/test-dup2
 gltests/test-environ
 gltests/test-errno
+gltests/test-fcntl-h
 gltests/test-fseeko
 gltests/test-getaddrinfo
 gltests/test-getdelim
@@ -88,21 +91,27 @@ gltests/test-getline
 gltests/test-getopt
 gltests/test-gettimeofday
 gltests/test-iconv
+gltests/test-inet_ntop
+gltests/test-inet_pton
 gltests/test-lseek
+gltests/test-lstat
 gltests/test-malloca
 gltests/test-mbrtowc
 gltests/test-mbsinit
 gltests/test-memchr
 gltests/test-netdb
 gltests/test-netinet_in
+gltests/test-open
 gltests/test-perror
 gltests/test-poll
 gltests/test-quotearg
 gltests/test-select
 gltests/test-select-fd
 gltests/test-select-stdin
+gltests/test-setenv
 gltests/test-snprintf
 gltests/test-sockets
+gltests/test-stat
 gltests/test-stdbool
 gltests/test-stddef
 gltests/test-stdint
@@ -111,14 +120,20 @@ gltests/test-stdlib
 gltests/test-strerror
 gltests/test-striconv
 gltests/test-string
+gltests/test-symlink
+gltests/test-sys_ioctl
 gltests/test-sys_select
 gltests/test-sys_socket
+gltests/test-sys_stat
 gltests/test-sys_time
+gltests/test-time
 gltests/test-unistd
+gltests/test-unsetenv
 gltests/test-vasnprintf
 gltests/test-version-etc
 gltests/test-wchar
 gltests/test-wctype
+gltests/test-xalloc-die
 gltests/time.h
 gltests/warn-on-use.h
 gsasl-*.tar.gz
